@@ -80,7 +80,6 @@ const httpserver = http.createServer((req, res) => {
   // acces limite.
   } else if (req.url.startsWith("/cdn/cdnboxStates") || req.url.startsWith("/cdn/config") ||
              req.url.startsWith("/cdn/cdnboxes") || req.url.startsWith("/cdn/console") ||
-             req.url.startsWith("/cdn/applis") || req.url.startsWith("/cdn/appliconsole") ||
              req.url.startsWith("/cdn/api/states") || req.url.startsWith("/cdn/status")) {
 
     if (req.method === 'OPTIONS') {
@@ -110,20 +109,9 @@ const httpserver = http.createServer((req, res) => {
         res.writeHead(200, { "Content-Type": "text/html", "Access-Control-Allow-Origin": "*" });
         htmlcdnboxes(req,res);
         res.end();
-      } else if (req.url.startsWith("/cdn/applis")) {
-        res.writeHead(200, { "Content-Type": "text/html", "Access-Control-Allow-Origin": "*" });
-        htmlapplis(req,res);
-        res.end();
       } else if (req.url.startsWith("/cdn/console")) {
         res.writeHead(200, { 'Content-Type': 'text/html' });
-        htmlconsole(res, buildtoken(req),'CDNBoxd Console','/cdn/cdnboxes',
-		    cdnboxStates.config.cdnboxes.length * 25 + 90);
-        res.end();
-      } else if (req.url.startsWith("/cdn/appliconsole")) {
-        res.writeHead(200, { 'Content-Type': 'text/html' });
-        htmlconsole(res, buildtoken(req),'CDNBoxd Applis','/cdn/applis',
-		    Object.keys(cdnboxStates.config.applis).length * 25 + 60);
-//        htmlappliconsole(res, buildtoken(req));
+        htmlconsole(res, buildtoken(req));
         res.end();
 
       // config API.
@@ -292,6 +280,18 @@ function htmlcdnboxes(req,res) {
       '<html>\n<head>\n<meta charset="utf-8">\n' +
       '<title>' + cdnboxStates.local.config.name + ' CDNBoxes</title>\n' +
       '<style>' + css + '</style>\n' +
+      `<script>
+         window.addEventListener("message", (event) => {
+           if (event.data.cdnboxes !== undefined) {
+	     if (event.data.cdnboxes) document.getElementById("tcdnbox").style.display = "table";
+	     else document.getElementById("tcdnbox").style.display = "none";
+	   }
+           if (event.data.applis !== undefined) {
+	     if (event.data.applis) document.getElementById("tapplis").style.display = "table";
+	     else document.getElementById("tapplis").style.display = "none";
+	   }
+	 }, false);
+       </script>\n` +
       '</head>\n<body>\n' +
       '<div class="head ' +
           (cdnboxStates.local.config.ishttp?(cdnboxStates.local.status==='on'?'normal':'alert'):'') +
@@ -305,7 +305,7 @@ function htmlcdnboxes(req,res) {
       res.write('<a href="' + req.url + '&action=on">On</a>');
     }
   }
-  res.write('</span>');
+  res.write('</span>\n');
   var deltatime = (Date.now() - cdnboxStates.starttime) / 1000;
   res.write(
       '<span class="uptime">Up: ' + 
@@ -319,7 +319,8 @@ function htmlcdnboxes(req,res) {
       '<span class="dnscount">DNSGT(r/s): ' + cdnboxStates.globaldnscount.last + '/' +
       Math.round(cdnboxStates.globaldnscount.average) + '/' +
       Math.round(cdnboxStates.globaldnscount.limit) + '</span></div>' +
-      '<table><tr><th>Name</th><th>Trans</th><th>BwT</th><th>Recv</th><th>Perf4</th><th>Perf6</th><th>Score</th>' +
+      '<table id="tcdnbox" style="display:' + (req.url.includes('cdnboxes=false')?'none':'table') + '">' +
+      '<tr><th>Name</th><th>Trans</th><th>BwT</th><th>Recv</th><th>Perf4</th><th>Perf6</th><th>Score</th>' +
       '<th>HTTP</th><th>DNS</th><th>Tests</th></tr>'
   );
   for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++ ) {
@@ -366,31 +367,10 @@ function htmlcdnboxes(req,res) {
     }
     res.write( '</td></tr>');
   }
-  res.write('</table>\n</body>\n</html>');
-}
+  res.write('</table>');
 
-function htmlapplis(req,res) {
-
-  res.write(
-      '<html>\n<head>\n<meta charset="utf-8">\n' +
-      '<title>' + cdnboxStates.local.config.name + ' CDNBoxes</title>\n' +
-      '<style>' + css + '</style>\n' +
-      '</head>\n<body>\n' +
-      '<div class="head ' +
-          (cdnboxStates.local.config.ishttp?(cdnboxStates.local.status==='on'?'normal':'alert'):'') +
-      '"><span class="name">' +
-      cdnboxStates.local.config.name + '</span>'
-  );
-  var deltatime = (Date.now() - cdnboxStates.starttime) / 1000;
-  res.write(
-      '<span class="uptime"> Up: ' + 
-      Math.floor(deltatime / 3600 / 24) + 'j' + 
-      Math.floor(deltatime / 3600 % 24) + 'h' + 
-      Math.floor(deltatime / 60 % 60) + 'm' + 
-      Math.floor(deltatime % 60) + 's </span>' +
-      '<span class="dnscount">DNS(r/m): ' + Math.round(cdnboxStates.totaldnscount.average) + '</span>' +
-      '</div><table><tr><th>Appli</th><th>Total</th>'
-  );
+  res.write('<table id="tapplis" class="applistats" style="display:' +
+	    (req.url.includes('applis=true')?'table':'none') + '"><tr><th>Appli</th><th>Total</th>');
   for (const cdnbox of cdnboxStates.config.cdnboxes) {
     res.write('<th class="boxname">' + cdnbox.name + '</th>');
   }
@@ -404,13 +384,15 @@ function htmlapplis(req,res) {
     }
     res.write( '</tr>');
   }
-  res.write('</table>\n</body>\n</html>');
+  res.write('</table>');
+  res.write('</body>\n</html>');
 }
 
-function htmlconsole(res,token,title,uri,frameheight) {
+function htmlconsole(res,token) {
 
-  res.write('<html>\n<header><meta charset="utf-8"><title>' + title + '</title>\n<script>\n');
   res.write(`
+    <html>\n<header><meta charset="utf-8"><title>CDNBoxd Console</title>
+    <script>
     function refreshframes() {
       var framelist = document.getElementsByTagName("iframe");
       var res = framelist[0].src.match(/token=([0-9]+)-[0-9A-Fa-f]+/);
@@ -418,7 +400,10 @@ function htmlconsole(res,token,title,uri,frameheight) {
         return location.reload(true);
       } else {
         for (var i = 0; i < framelist.length; i++) {
-          framelist[i].src = framelist[i].src.replace(/action=[a-zA-Z0-9]*/, "");
+          var url =  framelist[i].src.replace(/\\\?.*$/,"?") + '` + token + `';
+          url += '&cdnboxes=' + document.getElementById('cdnbox').checked;
+	  url += '&applis=' + document.getElementById('applis').checked;
+	  framelist[i].src = url;
         }
       }
     }
@@ -439,21 +424,46 @@ function htmlconsole(res,token,title,uri,frameheight) {
         refresher = setInterval(refreshframes, document.getElementById("refreshtime").value * 1000);
       }
     });
-  \n`);
+    function setframeheight(obj) {
+      var height = 70;
+      if (document.getElementById('cdnbox').checked) {
+        height += ` + (cdnboxStates.config.cdnboxes.length * 22 + 20) + `;
+      }
+      if (document.getElementById('applis').checked) {
+        height += ` + (Object.keys(cdnboxStates.config.applis).length * 22 + 31) + `;
+      }
+      obj.height = height;
+    }
+    function changeframe() {
+      var x = document.getElementsByTagName("iframe");
+      for (var i = 0; i < x.length; i++) {
+        setframeheight(x[i]);
+	x[i].contentWindow.postMessage( 
+	  { "cdnboxes": document.getElementById('cdnbox').checked,
+	    "applis": document.getElementById('applis').checked },
+	  x[i].src);
+      } 
+      refreshframes();
+    }
+  `);
   res.write('</script>\n</header>\n<body onload="startautorefresh();">\n');
   res.write(`<div>
       <button type="button" onClick="refreshframes();">Refresh</button>
-      <button type="button" id="stopaf" onClick="stopautorefresh();">Stop autorefresh</button>
-      <button type="button" id="startaf" onClick="startautorefresh();">Start autorefresh</button>
       <span>Refresh (s): <input type="text" id="refreshtime" value="5" size="5"/></span>
+      <button type="button" id="stopaf" onClick="stopautorefresh();">Stop</button>
+      <button type="button" id="startaf" onClick="startautorefresh();">Start</button>
+      <input type="checkbox" id="cdnbox" name="cdnbox" checked onchange="changeframe();">
+      <label for="cdnbox">Cdnboxes</label>
+      <input type="checkbox" id="applis" name="applis" checked onchange="changeframe();">
+      <label for="applis">Applis</label>
   </div>\n`);
   for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++ ) {
     var cdnboxState = cdnboxStates[cdnboxStates.config.cdnboxes[i].name];
     if (cdnboxState.config.isns) {
       res.write(
-          '<iframe width="540" height="' + frameheight + '" src="' +
-          cdnboxState.config.proto + '//' + cdnboxState.config.hostname + uri + '?' +
-          token + '"></iframe>\n'
+          '<iframe width="540" src="' +
+          cdnboxState.config.proto + '//' + cdnboxState.config.hostname + '/cdn/cdnboxes?' +
+          token + '&cdnboxes=true&applis=false" onload="setframeheight(this);"></iframe>\n'
       );
     }
   }
