@@ -1,3 +1,7 @@
+* 1619175974
+ - console fixes.
+* 1619127879
+ - moving appli statistic into console.
 * 1619026541
  - introducing appli statistic console.
 * 1618136439
